# wolf-m7m-cpuminer-V2

./: .directory  Makefile.am  Makefile.in  README  cpu-miner.c  cpuminer-config.h.in  m7mhash.c  magi-minerd.bat  magi-minerd.sh  miner.h  miner.sh
m7/: .directory  Makefile.am  Makefile.in
